Intermediate commit for direct formulation (not functionnal!!)
Signed-off-by: jarchambault <jeanne.archambault@artelys.com>